# atlas-cli-plugin-sh

./: Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  manifest.template.yml
.evergreen/: evergreen.yml
.evergreen/scripts/: build.sh  install-macnotary.sh  notarize-macos.sh  package.sh  release.sh
.evergreen/scripts/lib/: is-prerelease.sh
.evergreen/scripts/tests/: test-build.sh  test-install-macnotary.sh  test-is-prerelease.sh  test-notarize-macos.sh  test-package.sh  test-release.sh
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  commitlint.yml  dependabot-auto-merge.yml  prepare-release.yml  release.yml
docs/superpowers/plans/: 2026-05-07-atlas-sh.md
docs/superpowers/specs/: 2026-05-07-atlas-sh-design.md
src/: args.rs  atlas_ops.rs  credentials.rs  deps.rs  domain.rs  error.rs  main.rs
