[package]
name = "atlas-cli-plugin-sh"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/jeroenvervaeke/atlas-cli-plugin-sh"

[dependencies]
anyhow = "1.0"
bytes = "1"
http = "1"
typed-builder = "0.23"
clap = { version = "4.6.1", features = ["derive"] }
mongodb-atlas-cli = { version = "0.2.1", features = ["derive"] }
keyring = "3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
which = "7"
redacted = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dist]
inherits = "release"
lto = "thin"

[dist]
